# Nexus

./: CMakeLists.txt  Main.qml  README.md  configuration.cpp  configuration.h  configurationModel.cpp  configurationModel.h  main.cpp  resources.qrc  templateManager.cpp  templateManager.h  templates.json
documentation/: nexus_dev_docs.md  nexus_user_manual.md  template_system_guide.md
